# afk-bot

./: .coveragerc  .flake8  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/afk_bot/: __init__.py  cli.py  utils.py
tests/afk_bot/: test_utils.py
